syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "./proto/user";

message PermissionUser {
    string name = 1;
    string description = 2;
}

message RoleUser {
    string name = 1;
    string description = 2;
    repeated PermissionUser permissions = 3;
}

message User {
    int64 user_id = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string first_name = 5;
    string last_name = 6;
    bool is_active = 7;
    google.protobuf.Timestamp deactivated_at = 8;
    google.protobuf.Timestamp dob = 9;
    repeated RoleUser roles = 10;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    string status = 1;
    User created_user = 2;
}

message UpdateUserRequest {
    int64 user_id = 1;
    User updated_user = 2;
}

message UpdateUserResponse {
    string status = 1;
    User updated_user = 2;
}

message DeactivateUserRequest {
    int64 user_id = 1;
}

message DeactivateUserResponse {
    string status = 1;
}

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeactivateUser (DeactivateUserRequest) returns (DeactivateUserResponse);
}